--- a/profil-sekolah.html
+++ b/profil-sekolah.html
@@ -107,17 +107,17 @@
             <h2>PROGRAM UNGGULAN</h2>
 
             <div class="program">
-                <img src="https://via.placeholder.com/150" alt="Siswa Unggulan">
+                <img src="Gambar SD2.jpg" alt="Siswa Unggulan">
                 <h3>SISWA UNGGULAN</h3>
             </div>
 
             <div class="program">
-                <img src="https://via.placeholder.com/150" alt="Ruang Belajar">
+                <img src="gambarSD.jpg" alt="Ruang Belajar">
                 <h3>RUANG BELAJAR</h3>
             </div>
 
             <div class="program">
-                <img src="https://via.placeholder.com/150" alt="Olahraga">
+                <img src="OlahragaSD.jpg" alt="Olahraga">
                 <h3>OLAHRAGA</h3>
             </div>
         </div>
